--- a/style.css
+++ b/style.css
@@ -1,15 +1,40 @@
-:root {
-  --primary-color: #0aa1dd;
-  --primary-muted-color: hsla(197, 91%, 45%, 0.151);
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;500;700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;1,400;1,700&display=swap");
 
+:root {
+  --primary-color: hsl(197, 91%, 45%);
+  --primary-text-color: hsl(204, 100%, 40%);
+  --secondary-text-color: hsl(0 0% 0% / 60%);
+  --primary-muted-color: hsla(197, 91%, 45%, 0.151);
+  --logo-background: url(/images/visma-logo.png);
   --scrollbar-track-bg: #f5f5f5;
   --scrollbar-thumb-bg: #ddd;
   --slidev-code-radius: 8px;
+  --font-family: "Open Sans", "Nunito Sans", ui-sans-serif, system-ui,
+    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
+    Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji";
+  --slidev-code-font-family: "Ubuntu Mono", "Fira Code", ui-monospace,
+    SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
+    monospace;
+}
+
+pre,
+code,
+kbd,
+samp {
+  font-family: var(--slidev-code-font-family);
 }
 
 :root.dark {
-  --scrollbar-track-bg: #333;
-  --scrollbar-thumb-bg: #555;
+  --scrollbar-track-bg: hsl(0, 0%, 20%);
+  --scrollbar-thumb-bg: hsl(0, 0%, 33%);
+  --primary-text-color: hsl(0, 0%, 100%);
+  --secondary-text-color: hsl(0 0% 100% / 60%);
+  --logo-background: url(/images/visma-logo-white.png);
+}
+
+html {
+  font-family: var(--font-family);
 }
 
 /* style the scrollbar*/
